--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^20.8.8",
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
